--- a/client/html/navbar.html
+++ b/client/html/navbar.html
@@ -7,8 +7,10 @@
           <ul class="nav navbar-nav">
               {{#if currentUser}}
             <li class="active"><a href="/dashboard">Home</a></li>
-            <li><a href="#" id="logout"><i class="fa fa-sign-out"></i>logout</a></li>
             <li><a href="/profile">profile</a></li>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#" id="logout"><i class="fa fa-sign-out"></i>logout</a></li>
+              </ul>
             {{else}}
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
