--- a/client/html/dashboard.html
+++ b/client/html/dashboard.html
@@ -5,7 +5,6 @@
                 <form class="msg-post">
                     <div class="form-group">
                         <label for="usr">Type Message</label>
-                        <!-- <input class="form-control" name="msgPost" id="inputdefault"  placeholder="type message" type="text"> -->
                         <textarea class="form-control" name="msgPost" id="inputdefault"  placeholder="type message" ></textarea>
                       </div>
                       <button type="submit" class="btn btn-default">Submit</button>
@@ -32,7 +31,7 @@
                             </div>
                     {{#each comments}}
                     <div class="col-md-1">
-                        <img src="default.png" class="image" alt="">
+                        <img src="{{image}}" class="image" alt="">
                     </div>
                     
                     <div class="col-md-11 commentInput">
